<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateCache">

    <TextView
        android:id="@+id/cacheName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cache_name"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp" />

    <EditText
        android:id="@+id/editCacheName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cacheName"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:text="@string/text_goes_here"
        android:background="@layout/my_edit_text_border" />

    <TextView
        android:id="@+id/cacheContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cache_contents"
        android:layout_below="@+id/editCacheName"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp" />

    <EditText
        android:id="@+id/editCacheContent"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/cacheContent"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:paddingBottom="10dp"
        android:gravity="top"
        android:text="@string/description_of_the_cache"
        android:background="@layout/my_edit_text_border" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCacheContent"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:onClick="createCache" />

</RelativeLayout>