<resources>
    <string name="app_name">DigiGeo</string>
    <string name="cache">Cache</string>
    <string name="create">Create</string>
    <string name="cache_info_will_go_here">Cache Info Will Go Here</string>
    <string name="cache_name">Cache Name</string>
    <string name="cache_contents">Cache Contents</string>
    <string name="submit">Create Cache</string>
    <string name="enter_cache_name">Enter Cache Name…</string>
    <string name="enter_cache_contents">Enter Cache Contents…</string>
    <string name="openFail">Not close enough to open</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="cache_created">Cache created!</string>
</resources>
