...
            android:text="000.00000"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/longInd"
            app:layout_constraintTop_toBottomOf="@+id/cardLatitude" />

        <Button
            android:id="@+id/openCache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
...
